[Refactor] Modificar porcentaje de las clases terminadas

--- a/src/app/modules/tienda-auth/student-dashboard/student-dashboard.component.html
+++ b/src/app/modules/tienda-auth/student-dashboard/student-dashboard.component.html
@@ -695,15 +695,15 @@
                                       data-wow-delay=".3s"
                                       role="progressbar"
                                       [ngStyle]="{
-                                        width: t_course.percentage + '%'
+                                        width: 100 + '%'
                                       }"
-                                      [attr.aria-valuenow]="t_course.percentage"
+                                      [attr.aria-valuenow]="100"
                                       aria-valuemin="0"
                                       aria-valuemax="100"
                                     ></div>
                                     <span
                                       class="rbt-title-style-2 progress-number"
-                                      >{{ t_course.percentage }}%</span
+                                      >100%</span
                                     >
                                   </div>
                                 </div>
